--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
   "devDependencies": {
     "gh-pages": "^4.0.0",
     "react-router-dom": "^6.6.1"
-  }
+  },
+  "homepage": "http://chriscalvinn.github.io"
 }
