--- a/package.json
+++ b/package.json
@@ -43,5 +43,5 @@
     "gh-pages": "^4.0.0",
     "react-router-dom": "^6.6.1"
   },
-  "homepage": "http://chriscalvinn.github.io/Resume"
+  "homepage": "http://chriscalvinn.github.io/resume"
 }
